--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types" : ["node"],
     "lib": [
       "es2017",
-      "dom"
+      "dom",
+      "es2015.promise"
     ]
   }
 }
